# calatk

./: CMakeLists.txt  README.md  SuperBuild.cmake
Code/Applications/AtlasBuilder/: AtlasBuilder.cxx  AtlasBuilder.xml  CMakeLists.txt
Code/Applications/GeometricMetamorphosis/: CMakeLists.txt  GeometricMetamorphosis.cxx  GeometricMetamorphosis.xml
Code/Applications/LDDMM/: CMakeLists.txt  LDDMM.cxx  LDDMM.xml
Code/Applications/LongitudinalAtlasBuilder/: CMakeLists.txt  LongitudinalAtlasBuilder.cxx  LongitudinalAtlasBuilder.xml
Code/Applications/MetamorphosisShooting/: CMakeLists.txt  MetamorphosisShooting.cxx  MetamorphosisShooting.xml
Code/Libraries/Algorithms/: CAtlasBuilder.txx  CLDDMMGenericRegistration.txx  CLDDMMGeometricMetamorphosisRegistration.txx  CLDDMMVelocityFieldRegistration.txx  CLongitudinalAtlasBuilder.h  CLongitudinalAtlasBuilder.txx
Code/Libraries/DataStructures/: VectorArray.h  VectorArray.txx  VectorImage.txx  calatkMacros.h
Code/Libraries/ImageManager/: CImageManager.txx
Code/Libraries/Kernels/: CGaussianKernel.txx  CHelmholtzKernel.txx  CMultiGaussianKernel.txx
Code/Libraries/Numerics/: COneStepEvolver.txx  COneStepEvolverSemiLagrangianAdvection.txx  CSolverIpOpt.txx  CSolverLBFGS.txx  CSolverLineSearch.txx  (+3 more)
Code/Statistics/lstatGEE/: CMakeLists.txt  GEEutil_MN.cpp  itkLongitudinalStatisticsFilter.h  itkLongitudinalStatisticsFilter.txx  surallfileM10Y06_MN_JP.cpp
Code/Testing/: calatkApplicationImageFileNamesGivenTest.cxx  calatkCStateFactoryTest.cxx  calatkImageDataStructureTest.cxx  calatkImageManagerTest.cxx  calatkRegularizationSpacingTest.cxx  calatkVectorFieldUtilsTest.cxx
Code/Utilities/: applyMap.cxx
TestingData/longitudinalAtlas/: longitudinalAtlasCleaned-crossSectionalAtlas.json  longitudinalAtlasCleaned-individualGrowthModel.json  longitudinalAtlasCleaned-main.json  longitudinalAtlasCleaned-populationGrowthModel.json  longitudinalAtlasDataset.json
(+23 files in other folders)
